cluster/apps/monitoring/speedtest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: speedtest
    app.kubernetes.io/name: speedtest
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest
      app.kubernetes.io/instance: speedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest
        app.kubernetes.io/instance: speedtest
    spec:
      containers:
        - name: speedtest
          image: ghcr.io/linuxserver/librespeed:5.2.5
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 1
