cluster/apps/monitoring/speedtest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: speedtest
    app.kubernetes.io/name: speedtest
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: speedtest
    app.kubernetes.io/name: speedtest
