cluster/apps/monitoring/speedtest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "gw.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: dial
  labels:
    app.kubernetes.io/name: speedtest
    app.kubernetes.io/instance: speedtest
    app.kubernetes.io/part-of: speedtest
  name: speedtest
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: speedtest.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: speedtest
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - speedtest.${SECRET_PUBLIC_DOMAIN}
      secretName: tls.speedtest
